--- a/_publish.yml
+++ b/_publish.yml
@@ -6,3 +6,5 @@
       url: 'https://rstudiopbc-sandbox-249.atlassian.net/wiki/spaces/QTCT/pages/37879809'
     - id: '39747585'
       url: 'https://rstudiopbc-sandbox-249.atlassian.net/wiki/spaces/QTCT/pages/39747585'
+    - id: '50692717'
+      url: 'https://rstudiopbc-sandbox-249.atlassian.net/wiki/spaces/QTCT/pages/50692717'
