--- a/_publish.yml
+++ b/_publish.yml
@@ -2,3 +2,5 @@
   confluence:
     - id: '37879809'
       url: 'https://rstudiopbc-sandbox-249.atlassian.net/wiki/spaces/QTCT/pages/37879809'
+    - id: '51675137'
+      url: 'https://allenmanning.atlassian.net/wiki/spaces/QUARTOCONF/pages/51675137'
